--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -1,6 +1,6 @@
 .navbar {
   padding: 12px 0;
-  background-color: var(--green);
+  background-color: rgb(0, 0, 0);
   position: sticky;
   top: 0;
   z-index: 9999;
